# ProtonUp-GTK

./: README.md  requirements.txt  setup.cfg
.github/: FUNDING.yml
PySide6/: QtCore.py  QtGui.py  QtWidgets.py  __init__.py
pupgui2/: __main__.py  constants.py  networkutil.py  pupgtk.py  util.py
share/applications/: com.stfftw.protonupgtk.desktop
share/metainfo/: com.stfftw.protonupgtk.appdata.xml
tests/: test_dbusutil.py
