[metadata]
name = ProtonUp-GTK
version = 2.15.0
description = Install Wine- and Proton-based compatibility tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidoTek/ProtonUp-Qt
author = DavidoTek
license = GPL-3.0
license_files = 
    LICENSE
project_urls =
    Bug Tracker = https://github.com/DavidoTek/ProtonUp-Qt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
python_requires = >=3.10
install_requires =
    PyGObject>=3.42.0
    requests>=2.27.0
    vdf @ git+https://github.com/solsticegamestudios/vdf.git@v4.0
    inputs==0.5
    pyxdg>=0.27
    steam @ git+https://github.com/solsticegamestudios/steam.git@v1.6.1
    PyYAML>=6.0
    zstandard>=0.19.0

packages = find:

[options.entry_points]
gui_scripts =
    protonup-qt = pupgui2.pupgtk:main
    protonup-gtk = pupgui2.pupgtk:main

[options.data_files]
share/applications =
    share/applications/com.stfftw.protonupgtk.desktop
share/metainfo =
    share/metainfo/com.stfftw.protonupgtk.appdata.xml
share/metainfo/screenshots =
    share/metainfo/screenshots/screenshot-01.png
    share/metainfo/screenshots/screenshot-02.png
    share/metainfo/screenshots/screenshot-03.png
    share/metainfo/screenshots/screenshot-04.png
    share/metainfo/screenshots/screenshot-05.png
    share/metainfo/screenshots/screenshot-06.png
share/icons/hicolor/64x64/apps =
    share/icons/hicolor/64x64/apps/com.stfftw.protonupgtk.png
share/icons/hicolor/128x128/apps =
    share/icons/hicolor/128x128/apps/com.stfftw.protonupgtk.png
share/icons/hicolor/256x256/apps =
    share/icons/hicolor/256x256/apps/com.stfftw.protonupgtk.png
